--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js"></script>
+     <script type="module" src="script.js"></script>
 </body>
 </html>
